--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -21,11 +21,7 @@ RUN apk add zlib-dev libzip-dev freetype-dev libxml2-dev \
 
 
 # Install composer
-RUN curl -sS https://getcomposer.org/installer | php -- \
-        --filename=composer \
-        --install-dir=/usr/local/bin && \
-        echo "alias composer='composer'" >> /root/.bashrc && \
-        composer
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
 RUN addgroup -S www && adduser -S www -G www
 
